--- a/meteor/Views/TabView.axaml
+++ b/meteor/Views/TabView.axaml
@@ -42,16 +42,9 @@
             BorderBrush="{Binding BorderBrush}"
             Background="{Binding Background}"
             BorderThickness="0 0 1 0"
-            Padding="14 4 2 4" local:MiddleTabClickBehavior.CloseCommand="{Binding CloseTabCommand}"
+            Padding="14 4 2 4"
+            local:MiddleTabClickBehavior.CloseCommand="{Binding CloseTabCommand}"
             local:MiddleTabClickBehavior.CloseCommandParameter="{Binding}">
-        <ToolTip.Placement>
-            Pointer
-        </ToolTip.Placement>
-        <ToolTip.Tip>
-            <TextBlock FontFamily="{StaticResource SanFrancisco}"
-                       FontSize="13"
-                       Text="{Binding FilePath}" />
-        </ToolTip.Tip>
         <Grid x:Name="TabGrid" ColumnDefinitions="Auto,*,Auto" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Ellipse Grid.Column="0" Width="8" Height="8"
                      Fill="{Binding DirtyIndicatorBrush}"
