--- a/meteor/Views/TextEditor/TextEditor.axaml
+++ b/meteor/Views/TextEditor/TextEditor.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:meteor.ViewModels"
+             xmlns:views="clr-namespace:meteor.Views"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="meteor.Views.TextEditor"
              Foreground="{Binding Foreground, RelativeSource={RelativeSource Self}}"
@@ -13,4 +14,11 @@
              SelectionBrush="{Binding SelectionBrush, RelativeSource={RelativeSource Self}}"
              LineHighlightBrush="{Binding LineHighlightBrush, RelativeSource={RelativeSource Self}}">
 
+    <Popup x:DataType="viewModels:TextEditorViewModel"
+           IsOpen="{Binding IsPopupVisible}"
+           HorizontalOffset="{Binding PopupLeft}"
+           VerticalOffset="{Binding PopupTop}">
+        <views:CompletionPopup DataContext="{Binding CompletionPopupViewModel}" />
+    </Popup>
+    
 </UserControl>
