basic lsp completion support for typescript

--- a/meteor/App.axaml
+++ b/meteor/App.axaml
@@ -21,6 +21,7 @@
         <FluentTheme />
         <StyleInclude Source="/Styles/Styles.axaml" />
         <StyleInclude Source="/Styles/Buttons.axaml" />
+        <StyleInclude Source="/Styles/ListBox.axaml" />
         <StyleInclude Source="/Styles/Tooltip.axaml" />
         <StyleInclude Source="/Styles/ContextMenu.axaml" />
         <StyleInclude Source="avares://meteor/Views/HorizontalScrollableTabControl.axaml" />
