--- a/meteor/Resources/DarkTheme.axaml
+++ b/meteor/Resources/DarkTheme.axaml
@@ -71,6 +71,15 @@
     <Color x:Key="CommandPaletteBoxShadowColor">#20000000</Color>
     <Color x:Key="CommandPaletteTextBoxCaret">#FFFFFF</Color>
 
+    <!-- ListBox -->
+    <Color x:Key="ListBoxBackground">#1E1E1E</Color>
+    <Color x:Key="ListBoxBorder">#323232</Color>
+    <Color x:Key="ListBoxItemBackground">#1E1E1E</Color>
+    <Color x:Key="ListBoxItemForeground">#E0E0E0</Color>
+    <Color x:Key="ListBoxItemHoverBackground">#2A2A2A</Color>
+    <Color x:Key="ListBoxItemSelectedBackground">#3A3A3A</Color>
+    <Color x:Key="ListBoxItemSelectedForeground">#FFFFFF</Color>
+
     <!-- Syntax Highlighting -->
     <Color x:Key="KeywordColor">#569CD6</Color>
     <Color x:Key="CommentColor">#608B4E</Color>
