--- a/meteor/Views/SuggestionPane.axaml
+++ b/meteor/Views/SuggestionPane.axaml
@@ -1,12 +1,18 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:viewModels="clr-namespace:meteor.ViewModels"
              x:Class="meteor.Views.SuggestionPane">
 
     <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="3" Background="White">
-        <ListBox Name="SuggestionListBox" MaxHeight="200">
+        <ListBox Name="SuggestionListBox" MaxHeight="200"
+                 x:DataType="viewModels:SuggestionPaneViewModel"
+                 ItemsSource="{Binding Suggestions}"
+                 SelectedItem="{Binding SelectedSuggestion}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Orientation="Horizontal" />
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Label}" />
+                    </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
