--- a/meteor.App/Views/MainWindow.axaml
+++ b/meteor.App/Views/MainWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:meteor.ViewModels;assembly=meteor.ViewModels"
+        xmlns:views="clr-namespace:meteor.App.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="meteor.App.Views.MainWindow"
         Width="500"
@@ -16,4 +17,6 @@
         FontWeight="Normal"
         Cursor="Arrow"
         x:DataType="viewModels:MainWindowViewModel">
+
+        <views:TextEditor />
 </Window>
