--- a/meteor.App/Views/TextEditor.axaml
+++ b/meteor.App/Views/TextEditor.axaml
@@ -5,7 +5,7 @@
              xmlns:viewModels="clr-namespace:meteor.ViewModels;assembly=meteor.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="meteor.App.Views.TextEditor"
-             x:DataType="viewModels:ScrollableTextEditorViewModel"
+             x:DataType="viewModels:TextEditorViewModel"
              Foreground="{Binding Foreground, RelativeSource={RelativeSource Self}}"
              FontFamily="{Binding FontFamily, RelativeSource={RelativeSource Self}}"
              FontSize="{Binding FontSize, RelativeSource={RelativeSource Self}}">
