added and updated tests

--- a/src/meteor.UI/Views/MainWindow.axaml
+++ b/src/meteor.UI/Views/MainWindow.axaml
@@ -14,6 +14,8 @@
 
     <Window.KeyBindings>
         <KeyBinding Command="{Binding TabViewModel.AddTabCommand}" Gesture="Ctrl+N" />
+        <KeyBinding Command="{Binding TabViewModel.CloseTabCommand}"
+                    CommandParameter="{Binding TabViewModel.SelectedTab}" Gesture="Ctrl+W" />
     </Window.KeyBindings>
 
     <Window.DataTemplates>
