--- a/src/meteor.UI/Views/EditorView.axaml
+++ b/src/meteor.UI/Views/EditorView.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:converters="clr-namespace:meteor.UI.Converters"
              xmlns:viewModels="clr-namespace:meteor.UI.ViewModels"
+             xmlns:views="clr-namespace:meteor.UI.Views"
              x:Class="meteor.UI.Views.EditorView"
              Focusable="True"
              x:DataType="viewModels:EditorViewModel">
@@ -10,10 +11,20 @@
         <converters:VectorToAvaloniaVectorConverter x:Key="VectorConverter" />
     </UserControl.Resources>
 
-    <ScrollViewer x:Name="ScrollViewer"
-                  HorizontalScrollBarVisibility="Auto"
-                  VerticalScrollBarVisibility="Auto"
-                  Offset="{Binding ScrollOffset, Mode=TwoWay, Converter={StaticResource VectorConverter}}">
-        <Panel x:Name="EditorPanel" Background="Transparent" />
-    </ScrollViewer>
+    <Grid ColumnDefinitions="Auto,*">
+        <views:GutterView Grid.Column="0"
+                          x:Name="GutterView"
+                          ViewModel="{Binding GutterViewModel}"
+                          MinWidth="60"
+                          Width="{Binding GutterViewModel.GutterWidth}"
+                          HorizontalAlignment="Left" />
+
+        <ScrollViewer Grid.Column="1"
+                      x:Name="ScrollViewer"
+                      HorizontalScrollBarVisibility="Auto"
+                      VerticalScrollBarVisibility="Auto"
+                      Offset="{Binding ScrollOffset, Mode=TwoWay, Converter={StaticResource VectorConverter}}">
+            <Panel x:Name="EditorPanel" Background="Transparent" />
+        </ScrollViewer>
+    </Grid>
 </UserControl>
