--- a/meteor/src/meteor.UI/Views/MainWindow.axaml
+++ b/meteor/src/meteor.UI/Views/MainWindow.axaml
@@ -11,4 +11,8 @@
         Height="500"
         Title="meteor">
 
+    <Window.KeyBindings>
+        <KeyBinding x:DataType="viewModels:MainWindowViewModel" Command="{Binding OpenNewTabCommand}"
+                    Gesture="Ctrl+N" />
+    </Window.KeyBindings>
 </Window>
