--- a/meteor/src/meteor.UI/Resources/Styles/HorizontalScrollableTabControlStyles.axaml
+++ b/meteor/src/meteor.UI/Resources/Styles/HorizontalScrollableTabControlStyles.axaml
@@ -1,8 +1,8 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:views="clr-namespace:meteor.UI.Controls">
+        xmlns:controls="clr-namespace:meteor.UI.Features.Tabs.Controls">
 
-    <Style Selector="views|HorizontalScrollableTabControl">
+    <Style Selector="controls|HorizontalScrollableTabControl">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
