--- a/meteor/src/meteor/App.axaml
+++ b/meteor/src/meteor/App.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="meteor.App"
              xmlns:ui="clr-namespace:meteor.UI;assembly=meteor.UI"
-             xmlns:converters="clr-namespace:meteor.UI.Converters;assembly=meteor.UI"
+             xmlns:converters="clr-namespace:meteor.UI.Common.Converters;assembly=meteor.UI"
              RequestedThemeVariant="Default">
 
     <Application.DataTemplates>
