settings file and service

--- a/meteor/src/meteor.UI/Views/MainWindow.axaml
+++ b/meteor/src/meteor.UI/Views/MainWindow.axaml
@@ -20,5 +20,6 @@
                     Gesture="Cmd+W" />
         <KeyBinding Command="{Binding SaveFileCommand}" Gesture="Cmd+S" />
         <KeyBinding Command="{Binding OpenFileCommand}" Gesture="Cmd+O" />
+        <KeyBinding Command="{Binding OpenSettingsCommand}" Gesture="Cmd+OemComma" />
     </Window.KeyBindings>
 </Window>
